<resources>
    <string name="app_name">Loopang</string>
    <string name="splash_logo_image">Splash Logo Image</string>

    <!-- 로그인 액티비티용 스트링 리소스 -->
    <string name="guest_login_string">
        <u>Get in as Guest</u>
    </string>
    <string name="login_string">Start Loopstation</string>

    <!-- 레코딩 액티비티, 프래그먼트 용 스트링 리소스 -->
    <string name="title_activity_recording">Make Loop</string>

    <string name="music_list">Project Manager</string>
    <string name="music_list_search_hint">Search…</string>

    <string name="example_track_item">Track Item</string>
    <string name="example_song_item">Song Item</string>
    <string name="song_item_date_example">2019/03/18</string>

    <string name="layer_label">Layer #</string>

    <string name="title_save_loop">Save Project</string>
    <string name="title_loop_title">Loop Title</string>
    <string name="title_file_type">File Type</string>
    <string name="check_split">Split and Save</string>
    <string name="check_drop">Drop all of Layers</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="title_drop_all_of_layer">Drop all of Layer</string>
    <string name="query_drop_all_of_layer">Do you want to delete all of layer?</string>

    <string name="toast_playback_stop_error">You can\'t stop Looper during recording.</string>
    <string name="toast_playback_stop">PlayBack Stop!</string>
    <string name="toast_playback_start">PlayBack!</string>
    <string name="toast_playback_start_error">No Layer!</string>
    <string name="toast_record_start">Record New Layer!!</string>
    <string name="toast_record_start_error_without_playback">You can start record only loop is playing!</string>
    <string name="toast_record_stop">Recording Stop!</string>
    <string name="toast_save_error_no_layer">Please make Track at least 1</string>
    <string name="toast_save">Your Loop is saved</string>
    <string name="toast_save_error_failed">Save Failed</string>
    <string name="toast_save_error_while_record">Stop record before save Loop</string>
    <string name="toast_save_error_without_title">Please set title of your loop</string>
    <string name="toast_drop_all_of_layer">Drop all of Layers</string>
    <string name="toast_drop_all_of_layer_error_empty">No layer</string>
    <string name="toast_drop_all_of_layer_error_recording">To drop during recoding is unavailable</string>

    <string name="btn_more">more</string>
    <string name="btn_info">information of project</string>
    <string name="preview_playback">preview playback</string>
    <string name="file_type">File Type</string>
    <string name="hint_input_id">ID(Email)</string>
    <string name="hint_input_password">Password</string>
    <string name="btn_login_wait">Wait...</string>
    <string name="btn_sign_up">No account yet? Create one</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_register_sign_up">Sign up</string>
    <string name="hint_e_mail">Name</string>
    <string name="manage_preview_dialog_title_example">title_example</string>

    <string name="setting_notice_item_update_info">Update 0.1.1</string>
    <string name="title_overwrite">Overwrite</string>
    <string name="message_overwrite">same name file is already exist.  Do you want to overwrite file?</string>
    <string name="btn_overwrite">Overwrite</string>
    <string name="title_save_project">Save Project</string>
    <string name="volume_tab_str">VOLUME</string>
    <string name="effect_tab_str">EFFECT</string>
    <string name="btn_volume_control_str">Volume Control</string>
    <string name="title_save">Save</string>
    <string name="sound_format_type">Sound Format Type</string>
    <string name="title_music_title">Music Title</string>
    <string name="changelayerlabeldialog_title">Change Layer Label</string>
    <string name="changeprojecttitledialog_title">Change Project Title</string>


</resources>
