<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="72dp"
        android:descendantFocusability="blocksDescendants"
        android:background="@drawable/layerview_background">
    <TextView
            android:text="@string/file_type"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_type"
            app:layout_constraintStart_toStartOf="@+id/txt_title"
            app:layout_constraintBottom_toTopOf="@+id/txt_title"
            android:fontFamily="@font/roboto_light" android:textSize="12sp"/>
    <TextView
            android:text="@string/example_song_item"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/image_type"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/roboto_medium"/>
    <TextView
            android:text="@string/song_item_date_example"
            android:textColor="#ffffff"
            android:layout_below="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_date"
            android:layout_alignStart="@+id/txt_title"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"
            app:layout_constraintStart_toStartOf="@+id/txt_title" android:fontFamily="@font/roboto"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/round_insert_chart_outlined_white_24dp"
            android:id="@+id/image_type"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="9dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/baseline_play_arrow_white_24dp"
                android:background="@android:color/transparent"
                android:id="@+id/btn_playback"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:contentDescription="@string/preview_playback" android:scaleType="centerInside"/>
        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/outline_info_white_24dp"
                android:background="@android:color/transparent"
                android:id="@+id/btn_info"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:contentDescription="@string/btn_info" android:scaleType="centerInside"/>
        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/baseline_playlist_add_white_24dp"
                android:background="@android:color/transparent"
                android:id="@+id/btn_more"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:contentDescription="@string/btn_more" android:scaleType="centerInside"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
