<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_gradient_background"
        tools:context=".RegisterActivity">

    <TextView
            android:text="SIGN UP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp" android:textSize="36sp"
            android:textColor="@android:color/white" android:fontFamily="@font/roboto_medium"
            app:layout_constraintHorizontal_bias="0.483"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            android:theme = "@style/editTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp">
        <EditText android:id="@+id/input_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:theme="@style/editTextStyle"
                  android:hint="@string/hint_input_password" android:textColorHighlight="@android:color/white"
                  android:textColor="@android:color/white" android:textColorHint="@android:color/white"
                  android:backgroundTint="#FFFFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout2"
            android:layout_marginStart="32dp"
            android:theme="@style/editTextStyle"
            android:layout_marginEnd="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="32dp">
        <EditText android:id="@+id/input_id"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:theme="@style/editTextStyle"
                  android:hint="@string/hint_input_id" android:textColorHighlight="@android:color/white"
                  android:textColor="@android:color/white" android:textColorHint="@android:color/white"
                  android:backgroundTint="#FFFFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout3"
            android:layout_marginStart="32dp"
            android:theme="@style/editTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginEnd="32dp" tools:layout_editor_absoluteY="328dp">
        <EditText android:id="@+id/input_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:theme="@style/editTextStyle"
                  android:hint="@string/hint_e_mail" android:textColorHighlight="@android:color/white"
                  android:textColor="@android:color/white" android:textColorHint="@android:color/white"
                  android:backgroundTint="#FFFFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_sign_up"
            android:id="@+id/sign_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:background="#F1BBBA" android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>